--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,13 @@
   height: 60px;
   object-fit: fill;
 }
+
+.App.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
+
+body.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
